# minesweeper-ai-benchmark

./: .env.example  .env.render.example  .env.vercel.example  .gitignore  .vercelignore  CLAUDE.md  CLAUDE_DESKTOP_PROJECT_DESCRIPTION.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  MIGRATION_STATUS.md  MONOREPO.md  PLATFORM_TRANSFORMATION_COMPLETE.md  README.md  SERVERLESS_DEPLOYMENT_COMPLETE.md  TECH_DEBT.md  TILTS_TRANSFORMATION_SUMMARY.md  VERCEL_DEPLOYMENT.md  VERCEL_MIGRATION_PLAN.md  alembic.ini  analyze_benchmark_results.py  api  app-rams.js  apply-migrations.sh  apply-realtime-migration.sh  benchmark-sdk.js  benchmark_analysis_report.md  build.sh  check_env.py  check_game_issue.py  check_render_db.py  competition-manager.css  comprehensive_benchmark_report.md  debug_game.py  diagnose_api_issues.py  diagnose_env_vars.py  diagnose_leaderboard.py  docker-compose.yml  evaluate.html  evaluation-builder.css  (+53 more)
alembic/: env.py
api/: .env.sdk  admin-page.py  admin.py  ai_models.py  ai_models_http.py  auth.py  benchmark.py  benchmark_runner.py  compete.py  competition-sdk.py  db.py  errors.py  evaluate-sdk.ts  evaluate_sdk.py  evaluation.py  evaluations.py  events.py  game_runner.py  hello.py  host.py  index.py  join.py  leaderboard.py  leaderboard_simple.py  main.py  models-sdk.py  models_api.py  models_config.py  package-lock.json  package.json  ping.py  play.py  play_simple.py  prompts.py  realtime.py  requirements.txt  run_game.py  runner.py  sessions.py  simple.py  (+9 more)
deployment/: join-service-setup.md
docs/: AI_IMPLEMENTATION_GUIDE.md  AI_SDK_MIGRATION.md  API.md  (+26 more)
(+349 files in other folders)
