[tool.poetry]
name = "tilts-benchmark"
version = "0.1.0"
description = "A comprehensive benchmark platform for evaluating LLMs on logic-based reasoning tasks"
authors = ["Tilts Benchmark Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
openai = "^1.10.0"
anthropic = "^0.12.0"
click = "^8.1.7"
rich = "^13.7.0"
numpy = "^1.26.3"
asyncpg = "^0.29.0"
redis = "^5.0.1"
httpx = "^0.26.0"
gymnasium = "^0.29.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
ipython = "^8.20.0"

[tool.poetry.scripts]
tilts-benchmark = "src.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]